--- a/spring-ex-dependencies/pom.xml
+++ b/spring-ex-dependencies/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.guanmengyuan</groupId>
     <artifactId>spring-ex-dependencies</artifactId>
-    <version>3.5.6.1</version>
+    <version>3.5.7.1</version>
     <packaging>pom</packaging>
     <name>spring-ex-dependencies</name>
     <description>spring ex base pom</description>
@@ -33,29 +33,29 @@
     </scm>
 
     <properties>
-        <revision>3.5.6.1</revision>
+        <revision>3.5.7.1</revision>
         <java.version>21</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--        spring start-->
-        <spring-boot.version>3.5.6</spring-boot.version>
+        <spring-boot.version>3.5.7</spring-boot.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
-        <spring-cloud-alibaba.version>2025.0.0.0-preview</spring-cloud-alibaba.version>
+        <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
         <!--        spring end-->
 
         <mybatis-flex.version>1.11.3</mybatis-flex.version>
         <hutool.version>6.0.0-M22</hutool.version>
-        <alipay.version>4.40.465.ALL</alipay.version>
+        <alipay.version>4.40.483.ALL</alipay.version>
         <fastexcel.version>1.3.0</fastexcel.version>
-        <wx-java.version>4.7.8-20251004.014820</wx-java.version>
+        <wx-java.version>4.7.8-20251023.110018</wx-java.version>
         <dubbo.version>3.3.5</dubbo.version>
-        <jeepay.version>max-3.8.9</jeepay.version>
+        <jeepay.version>max-3.8.11</jeepay.version>
         <sa-token.version>1.44.0</sa-token.version>
         <forest.version>1.8.0</forest.version>
         <aws.version>2.28.24</aws.version>
-        <warm-flow.version>1.8.1</warm-flow.version>
-        <warm-flow-flex.version>1.8.1</warm-flow-flex.version>
+        <warm-flow.version>1.8.2</warm-flow.version>
+        <warm-flow-flex.version>1.8.2</warm-flow-flex.version>
         <poi.version>5.4.1</poi.version>
         <!--        build start-->
         <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
